tests/sources/invalid/strings/string_unknown_method.fire
// Semantic error: unknown method on type 'string'.

fn string_unknown_method() -> void {
    s: string = "hello";
    s.reverse();  //~ ERROR FS-SEM-0010 @7
}
